--- a/AdventOfCode23/AdventOfCode23.csproj
+++ b/AdventOfCode23/AdventOfCode23.csproj
@@ -9,10 +9,12 @@
 
   <ItemGroup>
     <None Remove="input.txt" />
+    <None Remove="Inputs\Day2.txt" />
   </ItemGroup>
 
   <ItemGroup>
     <EmbeddedResource Include="Inputs\Day1.txt" />
+    <EmbeddedResource Include="Inputs\Day2.txt" />
   </ItemGroup>
 
   <ItemGroup>
